y.output
语法

    0 $accept: stmts $end

    1 stmts: stmts intexpr EOL
    2      | stmts fltexpr EOL
    3      | stmts EOL
    4      | %empty

    5 intexpr: intexpr ADD intexpr
    6        | intexpr SUB intexpr
    7        | intexpr MUL intexpr
    8        | intexpr DIV intexpr
    9        | SUB intexpr
   10        | LEFTBRA intexpr RIGHTBRA
   11        | NUM

   12 fltexpr: fltexpr ADD fltexpr
   13        | fltexpr SUB fltexpr
   14        | fltexpr MUL fltexpr
   15        | fltexpr DIV fltexpr
   16        | SUB fltexpr
   17        | LEFTBRA fltexpr RIGHTBRA
   18        | FLT
   19        | fltexpr ADD intexpr
   20        | fltexpr SUB intexpr
   21        | fltexpr MUL intexpr
   22        | fltexpr DIV intexpr
   23        | intexpr ADD fltexpr
   24        | intexpr SUB fltexpr
   25        | intexpr MUL fltexpr
   26        | intexpr DIV fltexpr


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 11
FLT (259) 18
ADD (260) 5 12 19 23
SUB (261) 6 9 13 16 20 24
MUL (262) 7 14 21 25
DIV (263) 8 15 22 26
EOL (264) 1 2 3
LEFTBRA (265) 10 17
RIGHTBRA (266) 10 17
UMINUS (267)


Nonterminals, with rules where they appear

$accept (13)
    左： 0
stmts (14)
    左： 1 2 3 4, 右： 0 1 2 3
intexpr (15)
    左： 5 6 7 8 9 10 11, 右： 1 5 6 7 8 9 10 19 20 21 22 23 24
    25 26
fltexpr (16)
    左： 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26, 右： 2 12
    13 14 15 16 17 19 20 21 22 23 24 25 26


State 0

    0 $accept: . stmts $end

    $default  reduce using rule 4 (stmts)

    stmts  转到状态 1


State 1

    0 $accept: stmts . $end
    1 stmts: stmts . intexpr EOL
    2      | stmts . fltexpr EOL
    3      | stmts . EOL

    $end     shift, and go to state 2
    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    EOL      shift, and go to state 6
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 8
    fltexpr  转到状态 9


State 2

    0 $accept: stmts $end .

    $default  接受


State 3

   11 intexpr: NUM .

    $default  reduce using rule 11 (intexpr)


State 4

   18 fltexpr: FLT .

    $default  reduce using rule 18 (fltexpr)


State 5

    9 intexpr: SUB . intexpr
   16 fltexpr: SUB . fltexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 10
    fltexpr  转到状态 11


State 6

    3 stmts: stmts EOL .

    $default  reduce using rule 3 (stmts)


State 7

   10 intexpr: LEFTBRA . intexpr RIGHTBRA
   17 fltexpr: LEFTBRA . fltexpr RIGHTBRA

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 12
    fltexpr  转到状态 13


State 8

    1 stmts: stmts intexpr . EOL
    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    ADD  shift, and go to state 14
    SUB  shift, and go to state 15
    MUL  shift, and go to state 16
    DIV  shift, and go to state 17
    EOL  shift, and go to state 18


State 9

    2 stmts: stmts fltexpr . EOL
   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    ADD  shift, and go to state 19
    SUB  shift, and go to state 20
    MUL  shift, and go to state 21
    DIV  shift, and go to state 22
    EOL  shift, and go to state 23


State 10

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
    9        | SUB intexpr .
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    $default  reduce using rule 9 (intexpr)


State 11

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   16        | SUB fltexpr .
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    $default  reduce using rule 16 (fltexpr)


State 12

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   10        | LEFTBRA intexpr . RIGHTBRA
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    ADD       shift, and go to state 14
    SUB       shift, and go to state 15
    MUL       shift, and go to state 16
    DIV       shift, and go to state 17
    RIGHTBRA  shift, and go to state 24


State 13

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   17        | LEFTBRA fltexpr . RIGHTBRA
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    ADD       shift, and go to state 19
    SUB       shift, and go to state 20
    MUL       shift, and go to state 21
    DIV       shift, and go to state 22
    RIGHTBRA  shift, and go to state 25


State 14

    5 intexpr: intexpr ADD . intexpr
   23 fltexpr: intexpr ADD . fltexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 26
    fltexpr  转到状态 27


State 15

    6 intexpr: intexpr SUB . intexpr
   24 fltexpr: intexpr SUB . fltexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 28
    fltexpr  转到状态 29


State 16

    7 intexpr: intexpr MUL . intexpr
   25 fltexpr: intexpr MUL . fltexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 30
    fltexpr  转到状态 31


State 17

    8 intexpr: intexpr DIV . intexpr
   26 fltexpr: intexpr DIV . fltexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 32
    fltexpr  转到状态 33


State 18

    1 stmts: stmts intexpr EOL .

    $default  reduce using rule 1 (stmts)


State 19

   12 fltexpr: fltexpr ADD . fltexpr
   19        | fltexpr ADD . intexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 34
    fltexpr  转到状态 35


State 20

   13 fltexpr: fltexpr SUB . fltexpr
   20        | fltexpr SUB . intexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 36
    fltexpr  转到状态 37


State 21

   14 fltexpr: fltexpr MUL . fltexpr
   21        | fltexpr MUL . intexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 38
    fltexpr  转到状态 39


State 22

   15 fltexpr: fltexpr DIV . fltexpr
   22        | fltexpr DIV . intexpr

    NUM      shift, and go to state 3
    FLT      shift, and go to state 4
    SUB      shift, and go to state 5
    LEFTBRA  shift, and go to state 7

    intexpr  转到状态 40
    fltexpr  转到状态 41


State 23

    2 stmts: stmts fltexpr EOL .

    $default  reduce using rule 2 (stmts)


State 24

   10 intexpr: LEFTBRA intexpr RIGHTBRA .

    $default  reduce using rule 10 (intexpr)


State 25

   17 fltexpr: LEFTBRA fltexpr RIGHTBRA .

    $default  reduce using rule 17 (fltexpr)


State 26

    5 intexpr: intexpr . ADD intexpr
    5        | intexpr ADD intexpr .
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 5 (intexpr)


State 27

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr
   23        | intexpr ADD fltexpr .

    MUL  shift, and go to state 21
    DIV  shift, and go to state 22

    $default  reduce using rule 23 (fltexpr)


State 28

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    6        | intexpr SUB intexpr .
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 6 (intexpr)


State 29

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr
   24        | intexpr SUB fltexpr .

    MUL  shift, and go to state 21
    DIV  shift, and go to state 22

    $default  reduce using rule 24 (fltexpr)


State 30

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    7        | intexpr MUL intexpr .
    8        | intexpr . DIV intexpr
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    $default  reduce using rule 7 (intexpr)


State 31

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr
   25        | intexpr MUL fltexpr .

    $default  reduce using rule 25 (fltexpr)


State 32

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
    8        | intexpr DIV intexpr .
   23 fltexpr: intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    $default  reduce using rule 8 (intexpr)


State 33

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr
   26        | intexpr DIV fltexpr .

    $default  reduce using rule 26 (fltexpr)


State 34

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   19 fltexpr: fltexpr ADD intexpr .
   23        | intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 19 (fltexpr)


State 35

   12 fltexpr: fltexpr . ADD fltexpr
   12        | fltexpr ADD fltexpr .
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    MUL  shift, and go to state 21
    DIV  shift, and go to state 22

    $default  reduce using rule 12 (fltexpr)


State 36

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   20 fltexpr: fltexpr SUB intexpr .
   23        | intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 20 (fltexpr)


State 37

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   13        | fltexpr SUB fltexpr .
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    MUL  shift, and go to state 21
    DIV  shift, and go to state 22

    $default  reduce using rule 13 (fltexpr)


State 38

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   21 fltexpr: fltexpr MUL intexpr .
   23        | intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    $default  reduce using rule 21 (fltexpr)


State 39

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   14        | fltexpr MUL fltexpr .
   15        | fltexpr . DIV fltexpr
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    $default  reduce using rule 14 (fltexpr)


State 40

    5 intexpr: intexpr . ADD intexpr
    6        | intexpr . SUB intexpr
    7        | intexpr . MUL intexpr
    8        | intexpr . DIV intexpr
   22 fltexpr: fltexpr DIV intexpr .
   23        | intexpr . ADD fltexpr
   24        | intexpr . SUB fltexpr
   25        | intexpr . MUL fltexpr
   26        | intexpr . DIV fltexpr

    $default  reduce using rule 22 (fltexpr)


State 41

   12 fltexpr: fltexpr . ADD fltexpr
   13        | fltexpr . SUB fltexpr
   14        | fltexpr . MUL fltexpr
   15        | fltexpr . DIV fltexpr
   15        | fltexpr DIV fltexpr .
   19        | fltexpr . ADD intexpr
   20        | fltexpr . SUB intexpr
   21        | fltexpr . MUL intexpr
   22        | fltexpr . DIV intexpr

    $default  reduce using rule 15 (fltexpr)
